# maker

./: README.md
3d/components/TP4056/: TP4056_TP4056.stl
code/esp32/: README.md
code/esp32/01-Basic/: CMakeLists.txt  README.md
code/esp32/01-Basic/main/: CMakeLists.txt  Kconfig  gui.c  gui.h  lcd_helper.c  lcd_helper.h  lvgl_helper.c  main.c
code/esp32/02-WiFi/: CMakeLists.txt  README.md
code/esp32/02-WiFi/main/: CMakeLists.txt  Kconfig  app_state.c  app_state.h  idf_component.yml  main.c  wifi.c  wifi.h
code/esp32/02-WiFi/main/gui/: gui.c  (+4 more)
code/esp32/03-OTA/: CMakeLists.txt  README.md
code/esp32/03-OTA/main/: CMakeLists.txt  Kconfig  lvgl_helper.c  lvgl_helper.h
code/esp32/03-OTA/main/gui/: gui.c  gui.h  gui_main.c  gui_settings.c  gui_settings.h  gui_styles.c  gui_styles.h
code/esp32/03-OTA/main/gui/navigation/: gui_navigator.c  gui_navigator.h  gui_screen_manager.c  gui_screen_manager.h
code/esp32/03-OTA/main/gui/screens/: gui_screen_general.c  gui_screen_general.h  gui_screen_main.c  gui_screen_main.h  gui_screen_settings.c  gui_screen_settings.h  gui_screen_settings_system.c  gui_screen_settings_system.h  gui_screen_wifi.c  gui_screen_wifi.h
code/esp32/03-OTA/main/gui/widgets/: gui_widget_brightness.c  gui_widget_brightness.h  gui_widget_header.c  gui_widget_header.h
code/esp32/03-OTA/main/hardware/: lcd_helper.h  touch_helper.c  touch_helper.h
code/esp32/03-OTA/main/network/: network.c  network.h  network_config.h  ota_update.c  ota_update.h
code/esp32/03-OTA/main/storage/: README.md
code/esp32/04-SD/: CMakeLists.txt  README.md
code/esp32/04-SD/main/: CMakeLists.txt  Kconfig  main.c
code/esp32/05-TOTP/: .gitignore  CMakeLists.txt  README.md
code/esp32/05-TOTP/main/: CMakeLists.txt  Kconfig  idf_component.yml  main.c
code/esp32/05-TOTP/main/hardware/: hardware.c  hardware.h  wifi_helper.c  wifi_helper.h
code/esp32/05-TOTP/main/network/: server.c  server.h
code/esp32/05-TOTP/main/network/www/: index.html
code/esp32/05-TOTP/main/storage/: nvs_helper.c  nvs_helper.h
code/esp32/05-TOTP/main/totp/: totp_engine.c  totp_engine.h  totp_parser.c  totp_parser.h  totp_storage.c  totp_storage.h
code/esp32/05-TOTP/main/utils/: base32.c  base32.h  ntp.c  ntp.h
code/esp32/06-Buttons/: CMakeLists.txt  README.md
code/esp32/06-Buttons/main/: CMakeLists.txt  Kconfig  main.c
code/esp32/07-Oled-buttons/: CMakeLists.txt  README.md
code/esp32/07-Oled-buttons/main/: CMakeLists.txt  Kconfig  main.c
code/esp32/07-Oled-buttons/main/app/tasks/: button_task.c  button_task.h
code/esp32/07-Oled-buttons/main/bus/: i2c_helper.c  i2c_helper.h
code/esp32/07-Oled-buttons/main/core/: system_init.c  system_init.h
code/esp32/07-Oled-buttons/main/drivers/display/: oled_helper.c  oled_helper.h
code/esp32/07-Oled-buttons/main/drivers/input/: button_helper.c  button_helper.h
code/msp430/01-Blink/: .gitignore  Makefile  README.md  led.c  main.c
fritzing/01-Lipo-charger/: 01-lipo-charger.fzz  README.md
fritzing/components/: TP4056-3.fzpz  mini560-step-down-module.fzpz
(+20 files in other folders)
