idf_component_register(
    SRCS 
        "main.c"
        "lvgl_helper.c" 
        "gui/gui.c"
        "gui/gui_styles.c"
        "gui/gui_common.c"
        "gui/navigation/gui_navigator.c"
        "gui/navigation/gui_screen_manager.c"
        "gui/screens/gui_screen_main.c"
        "gui/screens/gui_screen_settings.c"
        "gui/screens/gui_screen_general.c"
        "gui/screens/gui_screen_wifi.c"
        "gui/screens/gui_screen_settings_system.c"
        "gui/widgets/gui_widget_header.c"
        "gui/widgets/gui_widget_brightness.c"
        "hardware/hardware.c"
        "hardware/lcd_helper.c"
        "hardware/touch_helper.c"
        "storage/storage.c"
        "storage/app_config.c"
        "network/network.c"
        "network/network_config.c"
        "network/ota_update.c"
    INCLUDE_DIRS 
        "."
        "gui"
        "gui/screens"
        "gui/widgets"
        "gui/navigation"
        "hardware"
        "storage"
        "network"
    PRIV_REQUIRES 
        spi_flash 
    REQUIRES 
        esp_timer 
        esp_wifi 
        nvs_flash
        esp_http_client
        app_update
)
